# deadman-switch-app

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  DEVELOPMENT_SAFETY_CHECKLIST.md  DOCKER_DEPLOYMENT.md  Dockerfile  README.md  alembic.ini  backup_database.py  cookies.txt  create_admin.py  create_test_user.py  deadman_switch_data_20250531_115032.json  deadman_switch_dump_20250531_115032.sql  deploy.sh  deploy_simple.py  deploy_to_render.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  quick_deploy.py  render.yaml
alembic/: env.py
alembic/versions/: 2afd24b4fb9e_initial_migration.py
src/deadman_switch/: __init__.py  admin.py  api.py  auth.py  client.py  database.py  main.py  models.py
templates/: base.html  index.html
templates/admin/: dashboard.html  notifications.html  settings.html  switches.html  users.html
templates/auth/: login.html  profile.html  register.html
templates/client/: create_switch.html  dashboard.html  edit_switch.html  switch_detail.html  switches.html
